--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,12 @@
 /*Fonts*/
+
 @font-face {
   font-family: "Roboto";
   font-style: normal;
   font-weight: bold;
   src: local("Roboto"),
-  url("../fonts/robotobold.woff2") format(woff2),
-  url("../fonts/robotobold.woff") format(woff);
+    url("../fonts/robotobold.woff2") format("woff2"),
+    url("../fonts/robotobold.woff") format("woff");
 }
 
 @font-face {
@@ -13,8 +14,8 @@
   font-style: normal;
   font-weight: 500;
   src: local("Roboto"),
-  url("../fonts/robotomedium.woff2") format(woff2),
-  url("../fonts/robotomedium.woff") format(woff);
+    url("../fonts/robotomedium.woff2") format("woff2"),
+    url("../fonts/robotomedium.woff") format("woff");
 }
 
 /*Variables*/
@@ -97,12 +98,9 @@ img {
   flex-wrap: wrap;
   align-items: center;
   margin: 0;
-  margin-left: 10px;
-  padding: 0;
-}
-
-.main-menu li {
+  margin-top: -5px;
   margin-left: 5px;
+  padding: 0;
 }
 
 .main-menu li:focus-within .sub-menu {
@@ -130,13 +128,9 @@ img {
   font-style: normal;
   font-size: 14px;
   line-height: 18px;
-  padding-left: 10px;
+  padding-left: 20px;
 }
 
-.main-menu li {
-  position: relative;
-  display: inline-block;
-}
 .main-menu a {
   display: block;
   font-weight: bold;
@@ -144,6 +138,8 @@ img {
   line-height: 18px;
   color: var(--basic-font-color);
   padding: 8px 12px;
+  margin-left: 8px;
+  margin-top: -6px;
 }
 
 .main-menu-press {
@@ -175,7 +171,7 @@ img {
   background-color: var(--basic-font-color);
   border-radius: 4px;
   font-weight: normal;
-  padding-inline-start: 0px;
+  padding-left: 0;
 }
 
 .sub-menu a {
@@ -184,6 +180,8 @@ img {
   font-size: 14px;
   line-height: 18px;
   text-decoration: none;
+  margin: 0;
+  padding-left: 20px;
 }
 
 .main-menu > li:hover .sub-menu {
@@ -217,7 +215,7 @@ img {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  margin-top: 16px;
+  margin-top: 14px;
   width: 245px;
   margin-left: 10px;
   margin-right: 27px;
@@ -264,9 +262,6 @@ img {
   background: rgba(255, 255, 255, 0.2);
   height: 32px;
   border-radius: 20px;
-}
-
-.header-button {
   color: var(--basic-font-color);
   font-size: 14px;
   font-weight: normal;
@@ -284,6 +279,7 @@ img {
   position: relative;
   width: 32px;
   height: 32px;
+  margin-top: 3px;
 }
 
 .search svg {
@@ -303,13 +299,14 @@ img {
   position: relative;
   width: 92px;
   text-align: right;
-  padding-top: 8px;
+  padding-top: 7px;
   padding-right: 16px;
+  margin-top: 3px;
 }
 
 .enter svg {
   position: absolute;
-  left: 16px;
+  left: 15px;
   top: 6px;
 }
 
@@ -323,8 +320,8 @@ img {
   position: relative;
   min-width: 100px;
   text-align: right;
-  padding-top: 8px;
-  padding-right: 16px;
+  padding-top: 7px;
+  padding-right: 18px;
 }
 
 .cart-catalog {
@@ -338,6 +335,8 @@ img {
   height: 32px;
   border-radius: 20px;
   background-color: var(--basic-font-color);
+  margin-top: 3px;
+  margin-right: 10px;
 }
 
 .main-header-buttons .cart-catalog {
@@ -392,12 +391,12 @@ img {
 
 .header-item {
   color: var(--basic-font-color);
-  font-weight: bold;
   font-size: 14px;
   font-weight: normal;
-  margin-top: -5px;
+  margin-top: -2px;
   margin-bottom: 8px;
   margin-right: 27px;
+  margin-left: 20px;
 }
 
 .header-contacts-wrapper {
@@ -409,15 +408,16 @@ img {
   justify-self: end;
   position: absolute;
   right: 0;
-  top:0;
+  top: -6px;
 }
+
 .header-phone {
   color: var(--basic-font-color);
   font-weight: bold;
   font-size: 22px;
   line-height: 24px;
   padding-top: 8px;
-  margin-right: 27px;
+  margin-right: 30px;
   position: relative;
   text-decoration: none;
   z-index: 1;
@@ -462,7 +462,7 @@ img {
   text-align: center;
   color: #ffffff;
   height: 200px;
-  margin-bottom: 60px;
+  margin-bottom: 50px;
 }
 
 .best-offer h2 {
@@ -496,13 +496,14 @@ img {
   font-weight: 800;
   padding: 0;
   margin: 0;
-  margin-top: 60px;
+  margin-top: 48px;
+  margin-left: -13px;
   margin-bottom: 20px;
 }
 
 .best-offer-button {
   display: inline-block;
-  padding: 12px 30px;
+  padding: 12px 32px;
   font-weight: 600;
   font-size: 31px;
   line-height: 41px;
@@ -517,7 +518,8 @@ img {
   box-shadow: 0 2px 2px rgba(172, 16, 0, 0.64);
   border: none;
   cursor: pointer;
-  margin-bottom: 20px;
+  margin-left: -22px;
+  margin-top: 5px;
 }
 
 .best-offer-button:hover {
@@ -528,12 +530,6 @@ img {
 .best-offer-button:active {
   background: linear-gradient(0deg, rgba(0, 0, 0, 0.07), rgba(0, 0, 0, 0.07)), linear-gradient(180deg, #F26843 0%, #E74A35 100%);
   box-shadow: inset 0px 2px 2px #942718;
-}
-
-.main-headline {
-  font-size: 35px;
-  line-height: 41px;
-  font-weight: bold;
 }
 
 .product-free-container {
@@ -559,7 +555,7 @@ img {
   padding-left: 16px;
   padding-bottom: 0;
   margin-bottom: 0;
-  margin-top: 16px;
+  margin-top: 12px;
   font-size: 35px;
   font-weight: 700;
   line-height: 41px;
@@ -575,13 +571,12 @@ img {
 
 .product-free-button {
   align-self: flex-end;
-  /* box-sizing: border-box; */
   flex-basis: auto;
   margin-top: auto;
   font-size: 18px;
   line-height: 24px;
   font-weight: bold;
-  padding: 14px 20px;
+  padding: 12px 22px;
   margin-bottom: 22px;
   margin-right: 22px;
   text-decoration: none;
@@ -606,7 +601,7 @@ img {
   color: var(--basic-font-color);
 }
 
-.button:active{
+.button:active {
   background: linear-gradient(0deg, rgba(0, 0, 0, 0.07), rgba(0, 0, 0, 0.07)), linear-gradient(180deg, #F26843 0%, #E74A35 100%);
   box-shadow: inset 0px 2px 2px #942718;
   border: none;
@@ -614,13 +609,13 @@ img {
 
 .slider-controls {
   position: absolute;
-  bottom: 5px;
+  bottom: 13px;
   left: 20px;
   z-index: 20;
   display: flex;
   width: 75px;
   justify-content: space-between;
-  margin-left: 10px;
+  margin-left: 9px;
 }
 
 .slider-controls .current {
@@ -646,11 +641,22 @@ img {
 }
 
 .site-wrapper {
-min-width: 940px;
-background-color: #849d8f;
-background-image: url("../img/pair-icecream01.png");
-background-repeat: no-repeat;
-background-position: center 0px;
+  min-width: 940px;
+  background-image: url("../img/pair-icecream01.png");
+  background-repeat: no-repeat;
+  background-position: center 0px;
+}
+
+.slide1 {
+  background-color: #849D8f;
+}
+
+.slide2 {
+  background-color: #8996A6;
+}
+
+.slide3 {
+  background-color: #9D8B84;
 }
 
 .chocolate-free {
@@ -667,7 +673,7 @@ background-position: center 0px;
 
 .chocolate-free h3 {
   padding-left: 16px;
-  margin-top: 16px;
+  margin-top: 12px;
   padding-bottom: 0;
   margin-bottom: 0;
   font-size: 35px;
@@ -689,7 +695,7 @@ background-position: center 0px;
   width: 586px;
   padding-left: 27px;
   margin-left: 0;
-  margin-bottom: 40px;
+  margin-bottom: 43px;
   list-style: none;
 }
 
@@ -699,6 +705,7 @@ background-position: center 0px;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-template-rows: repeat(3, 1fr);
   grid-column-gap: 26px;
+  grid-row-gap: 5px;
   list-style: none;
 }
 
@@ -755,7 +762,7 @@ background-position: center 0px;
   background-position: 0 0;
 }
 
-.ice-cream-img{
+.ice-cream-img {
   width: 267px;
   height: 267px;
   border-radius: 50%;
@@ -768,7 +775,7 @@ background-position: center 0px;
   height: 48px;
   align-self: center;
   font-size: 18px;
-  line-height: 24px
+  line-height: 24px;
   font-style: normal;
   font-weight: 700;
   white-space: nowrap;
@@ -791,7 +798,7 @@ background-position: center 0px;
 }
 
 .goods-item-name {
-  margin-top: -15px;
+  margin-top: -25px;
   text-align: center;
 }
 
@@ -801,6 +808,10 @@ background-position: center 0px;
   font-size: 16px;
   font-weight: 500;
   line-height: 22px;
+}
+
+.weight {
+  font-size: 30px;
 }
 
 .fast-view {
@@ -839,6 +850,7 @@ background-position: center 0px;
   padding-left: 20px;
   padding-right: 20px;
   margin-top: 25px;
+  color: var(--black-color);
 }
 
 .features-list {
@@ -850,6 +862,7 @@ background-position: center 0px;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 1fr 1fr;
   grid-column-gap: 27px;
+  grid-row-gap: 7px;
   list-style: none;
 }
 
@@ -884,18 +897,12 @@ background-position: center 0px;
   background-image: url("../img/temp.png");
 }
 
-.features h2 {
-  color: var(--black-color);
-  font-size: 24px;
-  line-height: 30px;
-  font-weight: normal;
-}
-
 .features li {
   color: var(--black-color);
   font-size: 16px;
   line-height: 22px;
   font-weight: normal;
+  margin-top: -5px;
 }
 
 .news-mailing-wrapper {
@@ -917,7 +924,7 @@ background-position: center 0px;
 
 .news-content h2 {
   padding: 0;
-  margin-top: -10px;
+  margin-top: -15px;
 }
 
 .news {
@@ -944,6 +951,7 @@ background-position: center 0px;
   font-size: 16px;
   font-weight: bold;
   line-height: 22px;
+  margin-top: 20px;
 }
 
 .mailing {
@@ -965,14 +973,14 @@ background-position: center 0px;
   position: relative;
   display: flex;
   flex-direction: column;
-  padding-left: 25px;
+  padding-left: 20px;
   width: 512px;
   padding-top: 10px;
   z-index: 2;
 }
 
 .email {
-  width: 360px;
+  width: 370px;
   height: 44px;
   -webkit-appearance: none;
   -moz-appearance: none;
@@ -988,18 +996,18 @@ background-position: center 0px;
   padding-left: 15px;
   padding-right: 15px;
   box-sizing: border-box;
-  margin-right: 15px;
+  margin-right: 5px;
 }
 
-.email placeholder {
-  color: rgba(153, 153, 153, 153, 1);
+.email::placeholder {
+  color: rgba(153, 153, 153, 1);
   font-size: 16px;
   line-height: 24px;
 }
 
 .mailing-form {
-  margin-left: 25px;
-  margin-top: 20px;
+  margin-left: 20px;
+  margin-top: 25px;
 }
 
 .button-mailing {
@@ -1034,7 +1042,7 @@ background-position: center 0px;
   line-height: 20px;
   font-weight: normal;
   padding: 0;
-  margin-top: 20px;
+  margin-top: 25px;
   margin-left: 0px;
 }
 
@@ -1075,10 +1083,10 @@ background-position: center 0px;
 
 .contacts-button {
   width: 253px;
-  height: 43px;
+  padding: 12px 12px;
   align-items: center;
-  margin-left: 20px;
-  margin-top: 15px;
+  margin-left: 25px;
+  margin-top: 12px;
 }
 
 .map {
@@ -1094,7 +1102,7 @@ background-position: center 0px;
   background-position: center;
 }
 
-.map-container iframe{
+.map-container iframe {
   border: 0;
   height: 100%;
   width: 100%;
@@ -1104,6 +1112,7 @@ background-position: center 0px;
 .page-catalog-header {
   margin-top: 10px;
 }
+
 .breadcrumbs {
   display: flex;
   justify-content: flex-start;
@@ -1178,7 +1187,8 @@ background-position: center 0px;
   justify-content: space-between;
   flex-wrap: wrap;
   padding-left: 27px;
-  width: 1000px;
+  width: 870px;
+  padding-top: 5px;
 }
 
 .sorting-filters {
@@ -1187,16 +1197,11 @@ background-position: center 0px;
   overflow: hidden;
 }
 
-.select-ice:active {
-  color: black;
-}
-
 .select-ice {
   -webkit-appearance: none;
   -moz-appearance: none;
   -ns-appearance: none;
   appearance: none;
-  /* outline: inherit; */
   position: relative;
   top: -8px;
   box-shadow: none;
@@ -1204,7 +1209,9 @@ background-position: center 0px;
   background: transparent;
   color: var(--basic-font-color);
   cursor: pointer;
-  width: 170px;
+  width: 190px;
+  padding-top: 16px;
+  padding-left: 16px;
 }
 
 .filter-sorting-box {
@@ -1241,12 +1248,6 @@ background-position: center 0px;
   color: black;
 }
 
-.select-ice {
-  width: 190px;
-  padding-top: 16px;
-  padding-left: 16px;
-}
-
 .filter-item {
   margin: 0;
   padding: 0;
@@ -1254,9 +1255,7 @@ background-position: center 0px;
 }
 
 .filter-price {
-  margin-top: 7px;
   width: 218px;
-  margin: 0;
 }
 
 .range-filter {
@@ -1287,7 +1286,7 @@ background-position: center 0px;
 
 .range-controls .toggle {
   position: absolute;
-  top: 10px;
+  top: 8px;
   left: 0px;
   width: 4px;
   height: 4px;
@@ -1297,11 +1296,11 @@ background-position: center 0px;
 }
 
 .range-controls .toggle-min {
-  left: 35px;
+  left: 37px;
 }
 
 .range-controls .toggle-max {
-  left: 130px;
+  left: 135px;
 }
 
 .range-controls .bar {
@@ -1318,11 +1317,10 @@ background-position: center 0px;
 .fat-filter-container {
   background: rgba(255, 255, 255, 0.2);
   border-radius: 20px;
-  width: 425px;
+  width: 410px;
   margin: 0;
   margin-top: 7px;
   padding-left: 14px;
-  padding: 0;
 }
 
 .fat-list {
@@ -1330,10 +1328,12 @@ background-position: center 0px;
   flex-direction: row;
   justify-content: space-between;
   list-style: none;
-  padding-left: 14px;
   margin: 0;
-  margin-left: 14px;
   padding: 7px;
+}
+
+.fat-list li {
+  margin-right: 10px;
 }
 
 .filter-legend {
@@ -1401,15 +1401,6 @@ background-position: center 0px;
   justify-content: space-between;
 }
 
-.sorting-ice {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  width: 870px;
-  padding-left: 27px;
-  padding-top: 5px;
-}
-
 .sorting-filler {
   display: flex;
   flex-wrap: wrap;
@@ -1461,7 +1452,6 @@ background-position: center 0px;
 .check-input:checked + label::after {
   content: "";
   position: absolute;
-  left: 0px;
   top: 0px;
   left: -31px;
   width: 24px;
@@ -1477,11 +1467,11 @@ background-position: center 0px;
 }
 
 .form-button {
-  font-style: 16px;
+  font-size: 16px;
   line-height: 18px;
   width: 144px;
   height: 36px;
-  margin-top: 22px;
+  margin-top: 24px;
   margin-left: 0px;
   border-radius: 20px;
   color: var(--basic-font-color);
@@ -1518,7 +1508,7 @@ background-position: center 0px;
   list-style: none;
 }
 
-.pagination-item a{
+.pagination-item a {
   display: block;
   box-sizing: border-box;
   color: var(--basic-font-color);
@@ -1542,7 +1532,7 @@ background-position: center 0px;
   background: var(--basic-font-color);
 }
 
-.pagination-item-active a{
+.pagination-item-active a {
   color: var(--black-color);
   background: var(--basic-font-color);
 }
@@ -1582,8 +1572,10 @@ background-position: center 0px;
   list-style: none;
   margin: 0;
   padding: 0;
-  margin-top: 15px;
+  margin-top: 25px;
   margin-left: 25px;
+  width: 165px;
+  justify-content: space-between;
 }
 
 .social-button {
@@ -1616,12 +1608,6 @@ background-position: center 0px;
   fill-opacity: 0.8;
 }
 
-.footer-social-links {
-  display: flex;
-  width: 165px;
-  justify-content: space-between;
-}
-
 .footer-social a {
   border-radius: 50%;
 }
@@ -1631,27 +1617,31 @@ background-position: center 0px;
 }
 
 .footer-info-links {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  width: 350px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  width: 340px;
   list-style: none;
-  padding-left: 0;
   margin: 0;
   padding: 0;
   margin-top: 30px;
+  margin-left: -20px;
 }
 
 .footer-info-links a {
   text-decoration: underline solid rgba(255, 255, 255, 0.2);
 }
 
-.footer-info-links li {
-  flex-basis: 45%;
+.footer-info-links:first-child {
+  margin-left: 10px;
 }
 
 .link-heart {
   position: relative;
+  margin-left: 30px;
+}
+
+.production {
+  margin-left: 30px;
 }
 
 .link-heart::after {
@@ -1679,7 +1669,7 @@ background-position: center 0px;
 }
 
 .footer-copyright img {
-  margin-left: 50px;
+  margin-left: 55px;
 }
 
 .footer-copyright-link {
@@ -1689,7 +1679,7 @@ background-position: center 0px;
   line-height: 18px;
   font-weight: normal;
   margin: 0;
-  margin-left: 50px;
+  margin-left: 55px;
 }
 
 .htmlacademy-link {
@@ -1719,6 +1709,7 @@ background-position: center 0px;
 
 .modal-search-form {
   width: 305px;
+  font-family: "Roboto", Arial, sans-serif;
 }
 
 .search-wrapper:hover .modal-search {
@@ -1735,9 +1726,10 @@ background-position: center 0px;
   border: 1px solid rgba(211, 211, 210, 1);
   border-radius: 4px;
   color: #323232;
+  font-family: "Roboto", Arial, sans-serif;
   font-size: 16px;
-  line-height: 20px;
   font-weight: bold;
+  line-height: 20px;
   height: 44px;
   padding-left: 15px;
   padding-right: 15px;
@@ -1745,7 +1737,8 @@ background-position: center 0px;
 
 .form-input::placeholder {
   color: rgba(153, 153, 153, 1);
-  font-weight: normal;
+  font-family: "Roboto", Arial, sans-serif;
+  font-weight: 100;
 }
 
 .form-input:focus {
@@ -1852,7 +1845,6 @@ background-position: center 0px;
   padding-left: 15px;
   padding-right: 15px;
   margin-left: 24px;
-  /* outline: none; */
   box-sizing: border-box;
 }
 
@@ -1915,7 +1907,7 @@ background-position: center 0px;
   width: 540px;
 }
 
-.сart-table {
+.cart-table {
   width: 510px;
 }
 
@@ -1938,7 +1930,7 @@ background-position: center 0px;
   text-decoration: none;
 }
 
-.сart-table .cart-item:last-child {
+.cart-item:last-child {
   padding-bottom: 17px;
   border-bottom: 1px solid #cacac7;
 }
@@ -1964,9 +1956,8 @@ background-position: center 0px;
 }
 
 .cart-item-title {
-  vertical-align: middle;
-  display: block;
   width: 217px;
+  font-weight: 500;
 }
 
 .cart-item-title,
@@ -1999,7 +1990,7 @@ background-position: center 0px;
   flex-direction: column;
 }
 
-.cart-order-button{
+.cart-order-button {
   align-self: flex-end;
   padding: 10px 15px;
   margin-bottom: 10px;
@@ -2007,4 +1998,8 @@ background-position: center 0px;
   line-height: 24px;
   font-weight: 700;
   text-decoration: none;
+}
+
+.modal-show {
+  display: block;
 }
